force-app/main/default/objects/AI_Response_Processing__c/AI_Response_Processing__c.object-meta.xml
<CustomObject>
    <label>Response Processing</label>
    <nameField>
        <displayFormat>ARP-{0000}</displayFormat>
        <label>AI Response Processing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Response Processing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>