force-app/main/default/objects/AI_Response_Processing__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Update Field</fullName>
                <default>true</default>
                <label>Update Field</label>
            </value>
            <value>
                <fullName>Call API</fullName>
                <isActive>false</isActive>
                <label>Call API</label>
            </value>
            <value>
                <fullName>Compose Email</fullName>
                <isActive>false</isActive>
                <label>Compose Email</label>
            </value>
            <value>
                <fullName>Create Note</fullName>
                <isActive>false</isActive>
                <label>Create Note</label>
            </value>
            <value>
                <fullName>Create Task</fullName>
                <isActive>false</isActive>
                <label>Create Task</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>