force-app/main/default/objects/AI_Response_Processing__c/fields/AI_Prompt_Component__c.field-meta.xml
<CustomField>
    <fullName>AI_Prompt_Component__c</fullName>
    <label>AI Prompt Component</label>
    <referenceTo>AI_Prompt_Component__c</referenceTo>
    <relationshipLabel>AI Response Processing</relationshipLabel>
    <relationshipName>AI_Response_Processing</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>