force-app/main/default/objects/AI_Response_Processing__c/fields/Destination_Field__c.field-meta.xml
<CustomField>
    <fullName>Destination_Field__c</fullName>
    <inlineHelpText>The field on the prompt object to be updated with the component value.</inlineHelpText>
    <label>Destination Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>