force-app/main/default/objects/AI_Response_Processing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Append_Timestamp__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>